--- a/frontend/components/account/pug/account-teamspaces.pug
+++ b/frontend/components/account/pug/account-teamspaces.pug
@@ -1,4 +1,4 @@
-.homeUserContent
+.homeUserContent(layout-fill)
 	md-content.md-whiteframe-1dp(aria-label="Teamspaces", flex)
 		md-toolbar
 			.md-toolbar-tools
