--- a/pug/frontend.pug
+++ b/pug/frontend.pug
@@ -11,6 +11,9 @@ html(lang="en")
 		title 3D Repo | Online BIM collaboration platform
 
 		script(type="text/javascript", src="/public/plugins/base/config.js")
+		
+		// Manifest file (PWA)
+		link(rel="manifest" href="/public/manifest.json")
 
 		// All CSS minified
 		link(rel='stylesheet', type='text/css', href='/public/dist/three_d_repo.min.css')
