ISSUE #394 - Fix error with undefined users being assigned

--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -271,7 +271,8 @@ account-info .accountInfoPage .md-button {
 
 /** Avatar Image ******************************************************************************************************/
 .account-avatar-image {
-  height:150px;
+  max-width: 300px;
+  max-height: 150px;
   background: #E8EAF6;
   margin: auto;
   margin-top: 20px;
