--- a/pug/frontend.pug
+++ b/pug/frontend.pug
@@ -13,7 +13,7 @@ html(lang="en")
 		script(type="text/javascript", src="/public/plugins/base/config.js")
 		
 		// Manifest file (PWA)
-		link(rel="manifest" href="/public/manifest.json")
+		link(rel="manifest" href="/manifest.json")
 
 		// All CSS minified
 		link(rel='stylesheet', type='text/css', href='/public/dist/three_d_repo.min.css')
