ISSUE #394 - Better mobile support, simplified frontend template

--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -47,6 +47,7 @@ account-dir #account #accountItem userContent {
   account-dir #account #accountItem {
     margin-left: 5%;
     margin-bottom: 100px;
+    margin-top: 200px;
   }
 }
 
