--- a/frontend/components/home/css/home.css
+++ b/frontend/components/home/css/home.css
@@ -131,10 +131,11 @@ home #legalLinks {
     right: 0;
     user-select: none;
     z-index: 2;
-    color: white;
-    background: rgba(203, 202, 200, 0.09);
+    color: #fff;
+    background: hsla(40, 3%, 79%, 0.62);
     border-top-left-radius: 4px;
     padding-bottom: 2px;
+    margin-right: 18px;
 }
 
 @media (max-width: 960px) {
@@ -143,6 +144,12 @@ home #legalLinks {
     text-align: center;
     background: #0c2f54;
   }
+
+    home #legalLinks a {
+    font-size: 11px !important;
+    margin: 5px 5px 5px !important;
+  }
+
 }
     
 home #legalLinks a {
