ISSUE #394 - WIP towards decoupling

--- a/pug/frontend.pug
+++ b/pug/frontend.pug
@@ -10,7 +10,7 @@ html(lang="en")
 		
 		title 3D Repo | Online BIM collaboration platform
 
-		script(type="text/javascript", src="/public/plugins/base/config.js")
+		script(type="text/javascript", src="/config.js")
 		
 		// Manifest file (PWA)
 		link(rel="manifest" href="/manifest.json")
