--- a/frontend/components/home/css/home.css
+++ b/frontend/components/home/css/home.css
@@ -132,7 +132,7 @@ home #legalLinks {
     user-select: none;
     z-index: 2;
     color: #fff;
-    background: hsla(40, 3%, 79%, 0.62);
+    background: #0c2f54;
     border-top-left-radius: 4px;
     padding-bottom: 2px;
     margin-right: 18px;
