ISSUE #394 - Config login messages

--- a/frontend/components/login/pug/login.pug
+++ b/frontend/components/login/pug/login.pug
@@ -15,6 +15,12 @@
 			div.loginBox.loadingBox(layout="row")
 				h3.welcome Welcome to 3D Repo!
 
+			// Behaviour if we provide a notice to the user
+			span(ng-if="vm.userNotice") 
+				strong Notice 
+				span : {{vm.userNotice}}
+			br(ng-if="vm.userNotice")
+			
 			// Register or login
 			div.loginBox(layout="row")
 				// Login
