--- a/frontend/css/ui.css
+++ b/frontend/css/ui.css
@@ -54,17 +54,23 @@
 	font-feature-settings: 'liga';
 }
 
+html, body {
+	background-color: #cfcdcc;
+}
+
 body #notSupported {
-	position: fixed;
-	background-color: lightgoldenrodyellow;
-	padding: 100px 50px;
-	left: 0;
-	right: 0;
-	margin: auto;
-	width: 50%;
-	text-align: center;
-	z-index: 10;
-	top: 20%;
-	font-size: 20px;
-	height: 70px;
+    position: absolute;
+	background: #0c2f54;
+    color: white;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    z-index: 10;
+    font-size: 20px;
+}
+
+body #notSupported a {
+	color: #289874;
 }
