--- a/frontend/components/login/pug/login.pug
+++ b/frontend/components/login/pug/login.pug
@@ -1,4 +1,8 @@
-.homeUserContent(layout="row", layout-align="center", flex)
+.homeUserContent(
+	layout="row"
+	layout-align="center"
+	flex)
+	
 	md-content.md-whiteframe(
 		aria-label="Registered"
 		flex-xl="15"
