--- a/frontend/components/account/pug/project-dialog.pug
+++ b/frontend/components/account/pug/project-dialog.pug
@@ -10,7 +10,7 @@ md-dialog.newModelDialog(aria-label="New project")
 		div(layout="column")
 			md-input-container
 				md-select(
-					ng-disabled="vm.projectData.teamspaceName != ''"
+
 					placeholder="Teamspace"
 					tdr-focus="true"
 					ng-model="vm.projectData.teamspaceName")
@@ -35,5 +35,5 @@ md-dialog.newModelDialog(aria-label="New project")
 					ng-disabled="vm.projectData.newProjectName == vm.projectData.oldProjectName"
 					ng-click="vm.updateProject(vm.projectData.teamspaceName, vm.projectData.oldProjectName, vm.projectData.newProjectName)") Update
 
-				p#modelDialogError(ng-if="vm.projectData.errorMessage") {{vm.errorMessage}}
+				p#modelDialogError(ng-if="vm.projectData.errorMessage") {{vm.projectData.errorMessage}}
 
