--- a/frontend/components/home/css/home.css
+++ b/frontend/components/home/css/home.css
@@ -13,16 +13,17 @@ home {
     top: 0;
     left: 0;
     width: 100%;
-    height: inherit;
+    height: 100%;
     overflow: hidden; 
-    background: #cfcdcc;
+    background-size: cover; 
+    background-image: url("/public/images/viewer_background.png");
 }
 
 home .homeContainer {
-    background-image: url("/public/images/viewer_background.png");
-    background-size: cover;
     height: 100%;
-    overflow: hidden;
+    overflow: hidden; 
+    position: relative;
+    overflow-y: auto;
 }
 
 home h3 {
@@ -126,7 +127,7 @@ home .homeUserContent md-tabs-wrapper {
 }
 
 home #legalLinks {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     right: 0;
     user-select: none;
@@ -141,6 +142,7 @@ home #legalLinks {
 @media (max-width: 960px) {
   home #legalLinks {
     width: 100%;
+    margin-right: 0;
     text-align: center;
     background: #0c2f54;
   }
@@ -150,6 +152,13 @@ home #legalLinks {
     margin: 5px 5px 5px !important;
   }
 
+}
+
+home #homeLoggedOut {
+    position: absolute;
+    margin: auto 0;
+    width: 100%;
+    height: 100%;
 }
     
 home #legalLinks a {
