--- a/frontend/components/login/css/login.css
+++ b/frontend/components/login/css/login.css
@@ -1,16 +1,11 @@
-login {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-size: contain;
-  margin-top: 120px;
+login .homeUserContent {
+  margin-top: 100px;
   z-index: 2;
 }
 
 @media (max-width: 960px) {
-  login {
-    margin-top: 10vh;
+  login .homeUserContent {
+    margin-top: 12vh;
   }
 }
 
