--- a/frontend/css/ui.css
+++ b/frontend/css/ui.css
@@ -55,22 +55,5 @@
 }
 
 html, body {
-	background-color: #cfcdcc;
-}
-
-body #notSupported {
-    position: absolute;
-	background: #0c2f54;
-    color: white;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    z-index: 10;
-    font-size: 20px;
-}
-
-body #notSupported a {
-	color: #289874;
+	background: #cfcdcc;
 }
