--- a/pug/frontend.pug
+++ b/pug/frontend.pug
@@ -28,34 +28,67 @@ html(lang="en")
 			script(type="text/ng-template", id=j.page+".html")
 				!= renderMe(j.path, locals)
 
+		// Inline CSS if CSS fails, also faster
+		style.
+			body #notSupported {
+				max-width: 100%;
+				max-height: 100%;
+				overflow: hidden;
+				position: absolute;
+				background: #0c2f54;
+				color: white;
+				left: 0;
+				right: 0;
+				width: 100%;
+				height: 100%;
+				text-align: center;
+				z-index: 10;
+				font-size: 20px;
+			}
+
+			body #notSupported a {
+				color: #289874;
+			}
+
+			body #notSupported img {
+				margin: 4%;
+				width: 90%;
+				max-width: 500px;
+			}
+
+			body #notSupported div {
+				margin: 4%; 
+				text-align: center;
+			}
+
 		noscript
 			#notSupported(aria-label="Not Supported")
-				div(style='margin:0px; text-align: center;')
-					img(style="margin: 10vh;" src="public/images/3drepo-logo-white.png")
-				| JavaScript is currently disabled, this site requires JavaScript to run!
+				div
+					img(src="public/images/3drepo-logo-white.png")
+				div
+					| JavaScript is currently disabled, this site requires JavaScript to run!
 
 
 		#notSupported(style='visibility:hidden', aria-label="Not Supported")
-
-			div(style='margin:0px; text-align: center;')
-					img(style="margin: 10vh;" src="public/images/3drepo-logo-white.png")
-
-			| Your browser is not supported.
-			| Please upgrade to the latest version of 
-			a(href='https://www.google.co.uk/chrome', target='_blank') Chrome
-			| , 
-			a(href='https://www.mozilla.org/firefox', target='_blank') FireFox
-			|  or 
-			a(target='_blank', href='https://www.microsoft.com/en-gb/windows/microsoft-edge') Edge
-			br
-			br
-			br
-			input(
-				id='notSupportedButton' 
-				type='button'
-				value='OK'
-				style='padding:10px 60px; font-size:14px;' 
-				onclick='document.getElementById("notSupported").style.visibility="hidden"')
+			div
+					img(src="public/images/3drepo-logo-white.png")
+			div
+				| Your browser is not supported.
+				| Please upgrade to the latest version of 
+				a(href='https://www.google.co.uk/chrome', target='_blank') Chrome
+				| , 
+				a(href='https://www.mozilla.org/firefox', target='_blank') FireFox
+				|  or 
+				a(target='_blank', href='https://www.microsoft.com/en-gb/windows/microsoft-edge') Edge
+				br
+				br
+				br
+				input(
+					id='notSupportedButton' 
+					type='button'
+					value='OK'
+					style='padding:10px 60px; font-size:14px;' 
+					onclick='document.getElementById("notSupported").style.visibility="hidden"')
 
 		// Fallback for IE 
 
@@ -68,7 +101,7 @@ html(lang="en")
 		|<![endif]-->
 
 		// Entry point for all components
-		home
+		home(flex, layout="column")
 
 		// CSS AND JAVASCRIPT -----------------------------------------------------------------------------------------
 
