ISSUE #394 - Default admin for model permissions where account matches

--- a/frontend/components/account/pug/account-assign.pug
+++ b/frontend/components/account/pug/account-assign.pug
@@ -228,6 +228,7 @@
 									td.fixedWidth(ng-repeat="value in vm.modelRoles", layout-align="center center")
 
 										md-radio-group(	
+											ng-disabled="vm.account === user"
 											ng-model="vm.selectedRole[user]"
 											layout-align="center center"
 											layout="row")
