--- a/frontend/components/account/pug/account-items.pug
+++ b/frontend/components/account/pug/account-items.pug
@@ -10,30 +10,30 @@
 				md-list-item.tree-node(flex)
 					.account(layout="row", layout-align="start center", md-ink-ripple, flex, ng-click="vm.toggleProjects(account.projects)")
 						md-button.md-icon-button(aria-label="Folder")
-							md-icon.angular-material-icons(ng-if="vm.shouldShow(account.projects)") folder_open
-							md-icon.angular-material-icons(ng-if="!vm.shouldShow(account.projects)") folder
+							md-icon.angular-material-icons(ng-show="vm.shouldShow(account.projects)") folder_open
+							md-icon.angular-material-icons(ng-show="!vm.shouldShow(account.projects)") folder
 						p {{account.account}}
-						md-icon.angular-material-icons.accountModelsSharedIcon(ng-if="!account.canAddModel") group
+						md-icon.angular-material-icons.accountModelsSharedIcon(ng-show="!account.canAddModel") group
 
 
 				div( layout="column")
 					// Project
 					
-					div(ng-if="vm.shouldShow(account.projects, 'projects')")
-						p.no-federations(ng-if="account.projects.length === 0") No projects created
+					div(ng-show="vm.shouldShow(account.projects, 'projects')")
+						p.no-federations(ng-show="account.projects.length === 0") No projects created
 
 						md-list.tree-branch(ng-repeat="project in account.projects")
 
 							div(ng-click="vm.toggleProject(project)" layout="row")
 								md-list-item.tree-node(flex, md-ink-ripple)
 									md-button.md-icon-button(aria-label="Folder")
-										md-icon.angular-material-icons(ng-if="vm.shouldShow(project)") folder_open
-										md-icon.angular-material-icons(ng-if="!vm.shouldShow(project)") folder 
+										md-icon.angular-material-icons(ng-show="vm.shouldShow(project)") folder_open
+										md-icon.angular-material-icons(ng-show="!vm.shouldShow(project)") folder 
 									p.projectName {{project.name}}
 
 								md-menu(
 									md-position-mode="target-right target"
-									ng-if="vm.projectData.visible(project)")
+									ng-show="vm.projectData.visible(project)")
 									md-button.md-icon-button(
 										aria-label="More"
 										ng-click="$mdOpenMenu($event)")
@@ -41,7 +41,7 @@
 									md-menu-content(width="3")
 										md-menu-item(ng-repeat="(key, value) in vm.projectData.projectOptions")
 											md-button(
-												ng-if="value.visible(project)"
+												ng-show="value.visible(project)"
 												ng-click="vm.doProjectOption(key, project, account)")
 												div(layout="row", flex)
 													span(flex, style="color:{{value.color}}") {{value.label}}
@@ -50,18 +50,18 @@
 														style="color:{{value.color}}") {{value.icon}}
 
 							// Project Models and Federations
-							md-list.tree-branch(ng-if="vm.shouldShow(project)")
+							md-list.tree-branch(ng-show="vm.shouldShow(project)")
 
 								div(ng-click="vm.toggleModels(project)")
 									md-list-item.tree-node(flex)
 										md-button.md-icon-button(aria-label="Folder")
-											md-icon.angular-material-icons(ng-if="vm.shouldShow(project, 'models')") folder_open
-											md-icon.angular-material-icons(ng-if="!vm.shouldShow(project, 'models')") folder
+											md-icon.angular-material-icons(ng-show="vm.shouldShow(project, 'models')") folder_open
+											md-icon.angular-material-icons(ng-show="!vm.shouldShow(project, 'models')") folder
 										p Models
 								
-								div(ng-if="vm.shouldShow(project, 'models')")
+								div(ng-show="vm.shouldShow(project, 'models')")
 									div(ng-repeat="model in vm.getIndividualModels(project.models)"
-										ng-if="model.name")
+										ng-show="model.name")
 								
 										account-model(
 											account="account.name"
@@ -77,20 +77,20 @@
 											quota="vm.quota"
 											subscriptions="vm.subscriptions")
 
-									p.no-federations(ng-if="vm.getIndividualModels(project.models).length == 0") No models created
+									p.no-federations(ng-show="vm.getIndividualModels(project.models).length == 0") No models created
 
 								
 								div(ng-click="vm.toggleFederations(project)")
 									md-list-item.tree-node(flex)
 										md-button.md-icon-button(aria-label="Folder")
-											md-icon.angular-material-icons(ng-if="vm.shouldShow(project, 'federations')") folder_open
-											md-icon.angular-material-icons(ng-if="!vm.shouldShow(project, 'federations')") folder
+											md-icon.angular-material-icons(ng-show="vm.shouldShow(project, 'federations')") folder_open
+											md-icon.angular-material-icons(ng-show="!vm.shouldShow(project, 'federations')") folder
 										p Federations
 									
-								div(ng-if="vm.shouldShow(project, 'federations')")
+								div(ng-show="vm.shouldShow(project, 'federations')")
 
 									div(ng-repeat="federation in vm.getFederations(project.models)"
-										ng-if="federation.name")
+										ng-show="federation.name")
 										
 										account-federations(											
 											federation="federation"
@@ -109,30 +109,30 @@
 											subscriptions="vm.subscriptions")
 
 									p.no-federations(
-										ng-if="!vm.hasFederations(project.models)") No federations created
+										ng-show="!vm.hasFederations(project.models)") No federations created
 
 
 						// Default - default space models and federations
-						md-list.tree-branch(ng-if="(account.models.length || account.models.length)")
+						md-list.tree-branch(ng-show="(account.models.length || account.models.length)")
 							div(ng-click="vm.toggleDefault(account.account, 'project')")
 								md-list-item.tree-node(flex, md-ink-ripple)
 									md-button.md-icon-button(aria-label="Folder")
-										md-icon.angular-material-icons(ng-if="vm.showDefaults(account.account, 'project')") folder_open
-										md-icon.angular-material-icons(ng-if="!vm.showDefaults(account.account, 'project')") folder  
+										md-icon.angular-material-icons(ng-show="vm.showDefaults(account.account, 'project')") folder_open
+										md-icon.angular-material-icons(ng-show="!vm.showDefaults(account.account, 'project')") folder  
 									p Default
 
 							// Unassigned Models and Federations
-							md-list.tree-branch(ng-if="vm.showDefaults(account.account, 'project')")
+							md-list.tree-branch(ng-show="vm.showDefaults(account.account, 'project')")
 
 								div(ng-click="vm.toggleDefault(account.account, 'models')")
 									md-list-item.tree-node(flex)
 										md-button.md-icon-button(aria-label="Folder")
-											md-icon.angular-material-icons(ng-if="vm.showDefaults(account.account, 'models')") folder_open
-											md-icon.angular-material-icons(ng-if="!vm.showDefaults(account.account, 'models')") folder 
+											md-icon.angular-material-icons(ng-show="vm.showDefaults(account.account, 'models')") folder_open
+											md-icon.angular-material-icons(ng-show="!vm.showDefaults(account.account, 'models')") folder 
 										p Models
 								
-								div(ng-if="vm.showDefaults(account.account, 'models')")
-									div(ng-if="model.name"
+								div(ng-show="vm.showDefaults(account.account, 'models')")
+									div(ng-show="model.name"
 										ng-repeat="model in account.models")
 
 										account-model(
@@ -150,16 +150,16 @@
 											quota="vm.quota"
 											subscriptions="vm.subscriptions")
 
-								p.no-federations(ng-if="account.models.length === 0") No default models
+								p.no-federations(ng-show="account.models.length === 0") No default models
 
 								div(ng-click="vm.toggleDefault(account.account, 'feds')")
 									md-list-item.tree-node(flex)
 										md-button.md-icon-button(aria-label="Folder")
-											md-icon.angular-material-icons(ng-if="vm.showDefaults(account.account, 'feds')") folder_open
-											md-icon.angular-material-icons(ng-if="!vm.showDefaults(account.account, 'feds')") folder 
+											md-icon.angular-material-icons(ng-show="vm.showDefaults(account.account, 'feds')") folder_open
+											md-icon.angular-material-icons(ng-show="!vm.showDefaults(account.account, 'feds')") folder 
 										p Federations
 
-								div(ng-if="vm.showDefaults(account.account, 'feds') && federation.name"
+								div(ng-show="vm.showDefaults(account.account, 'feds') && federation.name"
 									ng-repeat="(federationIndex, federation) in account.fedModels")
 
 									account-federations(
@@ -173,14 +173,14 @@
 										save-federation="vm.saveFederation"
 										accounts="vm.accounts")
 
-								p.no-federations(ng-if="account.fedModels.length === 0 && vm.showDefaults(account.account, 'feds')") No default federations
+								p.no-federations(ng-show="account.fedModels.length === 0 && vm.showDefaults(account.account, 'feds')") No default federations
 			
 			md-divider
 
 md-divider
 
 div(layout="row" flex layout-align="end center")
-	#floating-button(layout="column" ng-if="vm.addButtons" ng-init="vm.addEscape()")
+	#floating-button(layout="column" ng-show="vm.addButtons" ng-init="vm.addEscape()")
 		md-button(layout="row" ng-click="vm.newModel($event, vm.accounts)") Add Model
 		md-button(layout="row" ng-click="vm.setupNewFederation($event, vm.accounts)") Add Federation 
 		md-button(layout="row" ng-click="vm.newProject($event,  vm.accounts)") Add Project
@@ -189,7 +189,7 @@ div(layout="row" flex layout-align="end center")
 		md-icon.angular-material-icons {{vm.addButtonType}}
 
 
-	//div(ng-if="!vm.modelsExist")
+	//div(ng-show="!vm.modelsExist")
 		.cardInfo(layout="row", layout-align="center center")
 			p {{vm.info}}
-			md-progress-circular(md-diameter="20px", ng-if="vm.showProgress", md-mode="indeterminate")
+			md-progress-circular(md-diameter="20px", ng-show="vm.showProgress", md-mode="indeterminate")
