ISSUE #394 - Cleaner version management

--- a/frontend/components/home/pug/home.pug
+++ b/frontend/components/home/pug/home.pug
@@ -39,4 +39,5 @@ div.homeContainer(
 		a(
 			ng-repeat="display in vm.legalDisplays"
 			target="_blank"
+			rel="noopener"
 			href="{{display.page}}") {{display.title}}
