--- a/pug/invoice.pug
+++ b/pug/invoice.pug
@@ -186,4 +186,4 @@ html(lang="en" ng-app="3drepo")
 					p
 						| This invoice may be subject to the
 						=" "
-						a(target="_blank", href="http://ec.europa.eu/taxation_customs/taxation/vat/topics/invoicing_en.htm") Reverse Charge
+						a(target="_blank", rel="noopener", href="http://ec.europa.eu/taxation_customs/taxation/vat/topics/invoicing_en.htm") Reverse Charge
