--- a/frontend/components/sign-up/pug/sign-up.pug
+++ b/frontend/components/sign-up/pug/sign-up.pug
@@ -65,5 +65,5 @@
 							md-progress-circular(ng-if="vm.registering" md-mode="indeterminate", md-diameter="20")
 
 					div.bottom-links
-						a.registerLinks(target="_blank", href="http://3drepo.org/pricing/") Pricing
+						a.registerLinks(target="_blank", rel="noopener", href="http://3drepo.org/pricing/") Pricing
 						a.registerLinks(href="/") Log in
