ISSUE #394 - Step closer to decoupling backend and frontend :)

--- a/frontend/components/bottom-buttons/pug/compass.pug
+++ b/frontend/components/bottom-buttons/pug/compass.pug
@@ -3,4 +3,4 @@ X3D#Axes(keysEnabled="true", showStat="false", showLog="false", disableDoubleCli
 		Viewpoint(position="0 0 3.525")
 		NavigationInfo("type"="NONE")
 		Transform#AxesTrans
-			Inline("url"="public/compass.x3d", onload="compassLoaded(event);")
+			Inline("url"="compass.x3d", onload="compassLoaded(event);")
