ISSUE #394 - Fix issue with login page not loading

--- a/pug/refund.pug
+++ b/pug/refund.pug
@@ -10,7 +10,7 @@ html(lang="en" ng-app="3drepo")
 		title 3D Repo
 
 		// All CSS minified
-		link(rel='stylesheet', type='text/css', href=baseURL + '/public/dist/three_d_repo.min.css')
+		link(rel='stylesheet', type='text/css', href=baseURL + '/dist/three_d_repo.min.css')
 
 		// Styling used in the Angular Material demos
 		link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic")
