ISSUE #454 - Fix issue with Pin dissapearing when pin button is clicked

--- a/frontend/components/right-panel/css/right-panel.css
+++ b/frontend/components/right-panel/css/right-panel.css
@@ -11,6 +11,7 @@ right-panel #rightPanelButtons .rightPanelButtonGroup {
 
 right-panel #rightPanelButtons .md-button {
     margin-bottom: 2px;
+    margin-top: 14px;
 }
 
 right-panel #rightPanelButtons .fa {
